Fixed results making page jump.

--- a/style/style.css
+++ b/style/style.css
@@ -32,9 +32,12 @@ main {
   text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
 }
 
+.resultContainer {
+  min-height: 2em;
+}
+
 .result {
   font-weight: bold;
-  height: 1em;
 }
 
 .accent {
